<resources>
    <string name="app_name">CheapShark</string>
    <string name="data_is_empty">Data is empty, no data to be shown.</string>
    <string name="item_clicked">%s was clicked</string>
    <string name="search">Search</string>
    <string name="search_hint">Find deals game here…</string>
    <string name="favorite">Favorite</string>
    <string name="sort">Sort</string>

    <string name="sort_dialog_title">Sort by:</string>
    <string name="sort_default_label">Default</string>
    <string name="sort_title_label">Title</string>
    <string name="sort_price_label">Price</string>
    <string name="submit">Submit</string>

    <string name="game_details_title">Game Details</string>
    <string name="steam_app_id">Steam App ID: %s</string>
    <string name="cheapest_price_ever">Cheapest Price Ever!</string>
    <string name="ends_date">Grab it now before %s</string>
    <string name="check_other_stores">Check other stores</string>
    <string name="data_not_found">Data not found.</string>

    <string name="save_favorite">Save %s to favorites</string>
    <string name="remove_favorite">Remove %s from favorites</string>
</resources>