<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.details.GameDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_game_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_game_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_dark_primary"
                app:menu="@menu/menu_game_details"
                app:title="@string/game_details_title"
                app:titleCentered="true"
                app:titleTextAppearance="@style/Text.Title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/appbar_game_details">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_game_thumb_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_game_title_details"
            style="@style/Text.Title.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCardView"
            tools:text="Battlefleet Gothic: Armada" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_game_steam_app_id_details"
            style="@style/Text.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/steam_app_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_title_details" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            style="@style/Text.Subtitle.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/cheapest_price_ever"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_steam_app_id_details" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_game_cheapest_price_details"
            style="@style/Text.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:text="$3.20" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_game_deals_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_cheapest_price_details"
            tools:itemCount="5"
            tools:listitem="@layout/item_list_store" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>